--- a/Development/Iterations/Iteration 1/Qt Designer Pages/login.ui
+++ b/Development/Iterations/Iteration 1/Qt Designer Pages/login.ui
@@ -47,6 +47,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="placeholderText">
      <string>Enter Username:</string>
     </property>
