--- a/Development/Iterations/Iteration 1/Stylesheets/mainStylesheet.css
+++ b/Development/Iterations/Iteration 1/Stylesheets/mainStylesheet.css
@@ -1,6 +1,7 @@
 QWidget {
     background-color: deepskyblue;
     color: black;
+    /* font-family: "Monaco", "Lucida Console", Serif; */
 }
 
 QGraphicsView {
