--- a/Development/Iterations/Iteration 1/Qt Designer Pages/login.ui
+++ b/Development/Iterations/Iteration 1/Qt Designer Pages/login.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>loginWindow</class>
- <widget class="QMainWindow" name="loginWindow">
+ <widget class="QDialog" name="loginWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,185 +11,180 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <property name="styleSheet">
-    <string notr="true"/>
+  <widget class="QPushButton" name="btnLoginPVis">
+   <property name="geometry">
+    <rect>
+     <x>473</x>
+     <y>294</y>
+     <width>32</width>
+     <height>32</height>
+    </rect>
    </property>
-   <widget class="QLabel" name="lblLogin">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>50</y>
-      <width>251</width>
-      <height>171</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>30</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Login</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="txtLoginUname">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>210</y>
-      <width>231</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="placeholderText">
-     <string>Enter Username:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="txtLoginPWord">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>280</y>
-      <width>231</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="placeholderText">
-     <string>Enter Password:</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnLoginPVis">
-    <property name="geometry">
-     <rect>
-      <x>473</x>
-      <y>284</y>
-      <width>32</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
 	background-color: rgba(255, 255, 255, 0);
 	border-color: rgba(255, 255, 255, 0);
 }</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="checkable">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QGraphicsView" name="gVLogin">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>20</y>
-      <width>450</width>
-      <height>550</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>450</width>
-      <height>550</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>450</width>
-      <height>550</height>
-     </size>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::NoFrame</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnFPword">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>330</y>
-      <width>111</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtLoginPWord">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>290</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>Enter Password:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnLoginCancel">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>430</y>
+     <width>161</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QGraphicsView" name="gVLogin">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>30</y>
+     <width>450</width>
+     <height>550</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>450</width>
+     <height>550</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>450</width>
+     <height>550</height>
+    </size>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::NoFrame</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Plain</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblLogin">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>60</y>
+     <width>251</width>
+     <height>171</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>30</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Login</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnLoginRegister">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>480</y>
+     <width>161</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Register</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnFPword">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>340</y>
+     <width>111</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
 	background-color: rgba(255, 255, 255, 0);
 }</string>
-    </property>
-    <property name="text">
-     <string>Forgot Password?</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnLogin">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>370</y>
-      <width>161</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Login</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnLoginCancel">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>420</y>
-      <width>161</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Cancel</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnLoginRegister">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>470</y>
-      <width>161</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Register</string>
-    </property>
-   </widget>
-   <zorder>gVLogin</zorder>
-   <zorder>txtLoginUname</zorder>
-   <zorder>txtLoginPWord</zorder>
-   <zorder>lblLogin</zorder>
-   <zorder>btnLoginPVis</zorder>
-   <zorder>btnFPword</zorder>
-   <zorder>btnLogin</zorder>
-   <zorder>btnLoginCancel</zorder>
-   <zorder>btnLoginRegister</zorder>
+   </property>
+   <property name="text">
+    <string>Forgot Password?</string>
+   </property>
   </widget>
+  <widget class="QLineEdit" name="txtLoginUname">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>220</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="placeholderText">
+    <string>Enter Username:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnLogin">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>380</y>
+     <width>161</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Login</string>
+   </property>
+  </widget>
+  <zorder>gVLogin</zorder>
+  <zorder>txtLoginUname</zorder>
+  <zorder>btnFPword</zorder>
+  <zorder>btnLoginRegister</zorder>
+  <zorder>txtLoginPWord</zorder>
+  <zorder>btnLoginCancel</zorder>
+  <zorder>btnLogin</zorder>
+  <zorder>lblLogin</zorder>
+  <zorder>btnLoginPVis</zorder>
  </widget>
  <resources/>
  <connections/>
