Continued work on main page, completing the work on it for iteration 1. Iteration 1 development is now complete.
Need to test iteration 1 still though.

--- a/Development/Iterations/Iteration 1/Stylesheets/mainStylesheet.css
+++ b/Development/Iterations/Iteration 1/Stylesheets/mainStylesheet.css
@@ -7,6 +7,7 @@ QWidget {
 QGraphicsView {
     background-color: white;
     border-radius: 10px;
+    border: 2px solid rgb(216, 216, 216);
 }
 
 QLabel {
@@ -14,15 +15,22 @@ QLabel {
     color: black;
 }
 
+QPushButton#btnLoginFPword {
+    border-width: 0px;
+}
+
 QPushButton {
     background-color: skyblue;
-    border-bottom: cornflowerblue 2px solid;
+    border: 1px solid cornflowerblue;
     border-radius: 5px;
     color: black;
 }
 
 QPushButton:hover{
     border: lightskyblue 2px solid;
+    border-radius: 5px;
+    color: dodgerblue;
+    font-size: 13px;
 }
 
 QLineEdit {
