--- a/Development/Iterations/Iteration 1/Qt Designer Pages/login.ui
+++ b/Development/Iterations/Iteration 1/Qt Designer Pages/login.ui
@@ -10,6 +10,12 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -129,7 +135,7 @@
     <string>Register</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnFPword">
+  <widget class="QPushButton" name="btnLoginFPword">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -178,7 +184,7 @@
   </widget>
   <zorder>gVLogin</zorder>
   <zorder>txtLoginUname</zorder>
-  <zorder>btnFPword</zorder>
+  <zorder>btnLoginFPword</zorder>
   <zorder>btnLoginRegister</zorder>
   <zorder>txtLoginPWord</zorder>
   <zorder>btnLoginCancel</zorder>
