--- a/Development/Iterations/Iteration 1/Qt Designer Pages/mainWindow.ui
+++ b/Development/Iterations/Iteration 1/Qt Designer Pages/mainWindow.ui
@@ -10,6 +10,18 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -24,7 +36,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="gVFunc">
+   <widget class="QGraphicsView" name="gVMainFunc">
     <property name="geometry">
      <rect>
       <x>430</x>
@@ -40,7 +52,7 @@
       <x>160</x>
       <y>140</y>
       <width>151</width>
-      <height>20</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -58,11 +70,12 @@
       <x>480</x>
       <y>140</y>
       <width>161</width>
-      <height>20</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <pointsize>9</pointsize>
       <underline>true</underline>
      </font>
     </property>
@@ -139,9 +152,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
+      <y>-10</y>
       <width>801</width>
-      <height>51</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -154,7 +167,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>0</y>
+       <y>10</y>
        <width>201</width>
        <height>51</height>
       </rect>
@@ -166,24 +179,11 @@
       <string>Home</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="btnMainSciDrp">
-     <property name="geometry">
-      <rect>
-       <x>360</x>
-       <y>10</y>
-       <width>31</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
     <widget class="QPushButton" name="btnMainFunCat">
      <property name="geometry">
       <rect>
        <x>400</x>
-       <y>0</y>
+       <y>10</y>
        <width>201</width>
        <height>51</height>
       </rect>
@@ -199,7 +199,7 @@
      <property name="geometry">
       <rect>
        <x>600</x>
-       <y>0</y>
+       <y>10</y>
        <width>201</width>
        <height>51</height>
       </rect>
@@ -211,66 +211,43 @@
       <string>Login</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="btnMainAccDrp">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>760</x>
-       <y>10</y>
-       <width>31</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QLabel" name="lblMainSci">
+    <widget class="QPushButton" name="btnMainSciDrp">
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>0</y>
+       <y>10</y>
        <width>201</width>
        <height>51</height>
       </rect>
      </property>
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
      <property name="text">
-      <string>Scientific Functions</string>
-     </property>
-     <property name="scaledContents">
-      <bool>false</bool>
-     </property>
-     <property name="buddy">
-      <cstring>lblMainSci</cstring>
+      <string>Scientific Functions v</string>
      </property>
     </widget>
-    <zorder>lblMainSci</zorder>
+    <widget class="QPushButton" name="btnMainAccDrp">
+     <property name="geometry">
+      <rect>
+       <x>600</x>
+       <y>10</y>
+       <width>201</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
+     <property name="text">
+      <string>Account v</string>
+     </property>
+    </widget>
     <zorder>btnMainLogin</zorder>
-    <zorder>btnMainAccDrp</zorder>
-    <zorder>btnMainSciDrp</zorder>
     <zorder>btnMainFunCat</zorder>
     <zorder>btnMainHome</zorder>
-   </widget>
-   <widget class="QLabel" name="lblMainAcc">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>0</y>
-      <width>201</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Account</string>
-    </property>
-    <property name="buddy">
-     <cstring>lblMainSci</cstring>
-    </property>
+    <zorder>btnMainSciDrp</zorder>
+    <zorder>btnMainAccDrp</zorder>
    </widget>
    <widget class="QFrame" name="frameSci">
     <property name="geometry">
@@ -368,7 +345,7 @@
      </property>
     </widget>
    </widget>
-   <zorder>gVFunc</zorder>
+   <zorder>gVMainFunc</zorder>
    <zorder>gVMainData</zorder>
    <zorder>lblMainData</zorder>
    <zorder>lblMainFunc</zorder>
@@ -378,11 +355,28 @@
    <zorder>btnMainImplicit</zorder>
    <zorder>btnMainAlgebraic</zorder>
    <zorder>frameBar</zorder>
-   <zorder>lblMainAcc</zorder>
    <zorder>frameSci</zorder>
    <zorder>frameAcc</zorder>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>btnMainHome</tabstop>
+  <tabstop>btnMainSciDrp</tabstop>
+  <tabstop>btnMainFunCat</tabstop>
+  <tabstop>btnMainLogin</tabstop>
+  <tabstop>btnMainAccDrp</tabstop>
+  <tabstop>btnMainStats</tabstop>
+  <tabstop>btnMainTrig</tabstop>
+  <tabstop>btnMainSaved</tabstop>
+  <tabstop>btnMainLogout</tabstop>
+  <tabstop>gVMainData</tabstop>
+  <tabstop>btnMainTable</tabstop>
+  <tabstop>btnMainRandom</tabstop>
+  <tabstop>gVMainFunc</tabstop>
+  <tabstop>btnMainImplicit</tabstop>
+  <tabstop>btnMainAlgebraic</tabstop>
+  <tabstop>btnMain3D</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
