--- a/Development/Iterations/Iteration 2/Iteration 2.1/Stylesheets/mainStylesheet.css
+++ b/Development/Iterations/Iteration 2/Iteration 2.1/Stylesheets/mainStylesheet.css
@@ -50,3 +50,23 @@ QLineEdit {
 QLineEdit:focus{
     border-bottom: rgb(190, 190, 190) 2px solid;
 }
+
+QTableWidget {
+    background-color: white;
+    /* border: 2px solid rgb(216, 216, 216); */
+    border-radius: 3px;
+}
+
+QHeaderView {
+    background-color: white;
+    border: 1px solid rgb(216, 216, 216);
+}
+
+QTableWidget::item {
+    border: 1px solid rgb(216, 216, 216);
+}
+
+QTableCornerButton {
+    background-color: white;
+    border: 1px solid rgb(216, 216, 216);
+}
