Continued work on Iteration 3.1.
Need to do:
- Implement graphing functions.
- Close catalogue window.

--- a/Development/Iterations/Iteration 3/Iteration 3.1/Qt Designer Pages/dataWindow.ui
+++ b/Development/Iterations/Iteration 3/Iteration 3.1/Qt Designer Pages/dataWindow.ui
@@ -35,13 +35,13 @@
     </rect>
    </property>
    <property name="frameShape">
-    <enum>QFrame::NoFrame</enum>
+    <enum>QFrame::Shape::NoFrame</enum>
    </property>
    <property name="midLineWidth">
     <number>1</number>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="dataTable">
     <widget class="QTableWidget" name="tblTDataPoints">
@@ -69,22 +69,22 @@
       <bool>false</bool>
      </property>
      <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
+      <enum>QFrame::Shape::NoFrame</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
+      <enum>QFrame::Shadow::Plain</enum>
      </property>
      <property name="midLineWidth">
       <number>1</number>
      </property>
      <property name="verticalScrollBarPolicy">
-      <enum>Qt::ScrollBarAsNeeded</enum>
+      <enum>Qt::ScrollBarPolicy::ScrollBarAsNeeded</enum>
      </property>
      <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarAsNeeded</enum>
+      <enum>Qt::ScrollBarPolicy::ScrollBarAsNeeded</enum>
      </property>
      <property name="sizeAdjustPolicy">
-      <enum>QAbstractScrollArea::AdjustIgnored</enum>
+      <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustIgnored</enum>
      </property>
      <property name="autoScroll">
       <bool>false</bool>
@@ -93,7 +93,7 @@
       <bool>true</bool>
      </property>
      <property name="textElideMode">
-      <enum>Qt::ElideLeft</enum>
+      <enum>Qt::TextElideMode::ElideLeft</enum>
      </property>
      <property name="showGrid">
       <bool>true</bool>
@@ -186,7 +186,7 @@
     <widget class="QWidget" name="gridLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>80</x>
+       <x>70</x>
        <y>90</y>
        <width>661</width>
        <height>451</height>
@@ -204,10 +204,10 @@
       </rect>
      </property>
      <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+      <enum>QFrame::Shape::StyledPanel</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
+      <enum>QFrame::Shadow::Raised</enum>
      </property>
      <widget class="QWidget" name="verticalLayoutWidget">
       <property name="geometry">
@@ -224,7 +224,7 @@
     <widget class="QPushButton" name="btnDataWindowHome">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>320</x>
        <y>560</y>
        <width>161</width>
        <height>24</height>
