--- a/Development/Iterations/Iteration 3/Iteration 3.1/Qt Designer Pages/catalogueWindow.ui
+++ b/Development/Iterations/Iteration 3/Iteration 3.1/Qt Designer Pages/catalogueWindow.ui
@@ -28,9 +28,24 @@
      <height>430</height>
     </rect>
    </property>
-   <property name="selectionBehavior">
-    <enum>QAbstractItemView::SelectItems</enum>
+   <property name="focusPolicy">
+    <enum>Qt::FocusPolicy::NoFocus</enum>
    </property>
+   <property name="sizeAdjustPolicy">
+    <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContents</enum>
+   </property>
+   <property name="tabKeyNavigation">
+    <bool>false</bool>
+   </property>
+   <property name="alternatingRowColors">
+    <bool>false</bool>
+   </property>
+   <property name="selectionBehavior">
+    <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+   </property>
+   <attribute name="horizontalHeaderHighlightSections">
+    <bool>false</bool>
+   </attribute>
   </widget>
   <widget class="QLineEdit" name="txtCatSearch">
    <property name="geometry">
