--- a/Development/Iterations/Iteration 3/Iteration 3.2/Qt Designer Pages/functionWindow.ui
+++ b/Development/Iterations/Iteration 3/Iteration 3.2/Qt Designer Pages/functionWindow.ui
@@ -34,6 +34,9 @@
      <height>601</height>
     </rect>
    </property>
+   <property name="currentIndex">
+    <number>0</number>
+   </property>
    <widget class="QWidget" name="graphViewer">
     <widget class="QFrame" name="frameFuncWindowBar">
      <property name="geometry">
@@ -61,7 +64,7 @@
       </property>
       <layout class="QVBoxLayout" name="lytfuncWindowBar"/>
      </widget>
-     <widget class="QPushButton" name="btnFuncSWindowave">
+     <widget class="QPushButton" name="btnFuncWindowSave">
       <property name="geometry">
        <rect>
         <x>640</x>
@@ -102,7 +105,160 @@
    </widget>
    <widget class="QWidget" name="twoDimGraph"/>
    <widget class="QWidget" name="threeDimGraph"/>
-   <widget class="QWidget" name="implicitGraph"/>
+   <widget class="QWidget" name="implicitGraph">
+    <widget class="QGraphicsView" name="gVImp">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>40</y>
+       <width>621</width>
+       <height>501</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpXVar">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>150</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Axis Title:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpYVar">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>150</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Axis Title:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpRSide">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>200</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Right Hand Side Of Equation:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpLSide">
+     <property name="geometry">
+      <rect>
+       <x>182</x>
+       <y>200</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Left Hand Side Of Equation:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpXUb">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>250</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Upper Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpXLb">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>250</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Lower Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpYUb">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>300</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Upper Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtImpYLb">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>300</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Lower Bound:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnImpGraph">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>430</y>
+       <width>160</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Graph</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnImpHome">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>430</y>
+       <width>160</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Home</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
  </widget>
  <resources/>
