--- a/Development/Iterations/Iteration 3/Iteration 3.3/Qt Designer Pages/functionWindow.ui
+++ b/Development/Iterations/Iteration 3/Iteration 3.3/Qt Designer Pages/functionWindow.ui
@@ -103,8 +103,336 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="twoDimGraph"/>
-   <widget class="QWidget" name="threeDimGraph"/>
+   <widget class="QWidget" name="threeDimGraph">
+    <widget class="QLineEdit" name="txtTriYUb">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>360</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Upper Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTriYVar">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>210</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Axis Title:</string>
+     </property>
+    </widget>
+    <widget class="QGraphicsView" name="gVTri">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>90</y>
+       <width>621</width>
+       <height>501</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTriYLb">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>360</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Lower Bound:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnTriHome">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>490</y>
+       <width>160</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Home</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lblTriLSide">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>260</y>
+       <width>171</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Z                       = </string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnTriGraph">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>490</y>
+       <width>160</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Graph</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTriXLb">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>310</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Lower Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTriRSide">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>260</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Right Hand Side Of Equation:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTriXVar">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>210</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Axis Title:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTriXUb">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>310</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Upper Bound:</string>
+     </property>
+    </widget>
+    <zorder>gVTri</zorder>
+    <zorder>txtTriYUb</zorder>
+    <zorder>txtTriYVar</zorder>
+    <zorder>txtTriYLb</zorder>
+    <zorder>btnTriHome</zorder>
+    <zorder>lblTriLSide</zorder>
+    <zorder>btnTriGraph</zorder>
+    <zorder>txtTriXLb</zorder>
+    <zorder>txtTriRSide</zorder>
+    <zorder>txtTriXVar</zorder>
+    <zorder>txtTriXUb</zorder>
+   </widget>
+   <widget class="QWidget" name="twoDimGraph">
+    <widget class="QLineEdit" name="txtTwoYUb">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>360</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Upper Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTwoRSide">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>260</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Right Hand Side Of Equation:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTwoYLb">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>360</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Lower Bound:</string>
+     </property>
+    </widget>
+    <widget class="QGraphicsView" name="gVTwo">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>90</y>
+       <width>621</width>
+       <height>501</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnTwoHome">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>490</y>
+       <width>160</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Home</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTwoXVar">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>210</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Axis Title:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTwoXUb">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>310</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Upper Bound:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTwoYVar">
+     <property name="geometry">
+      <rect>
+       <x>430</x>
+       <y>210</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Enter Y Axis Title:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtTwoXLb">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>310</y>
+       <width>200</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="placeholderText">
+      <string>Enter X Lower Bound:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnTwoGraph">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>490</y>
+       <width>160</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Graph</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lblTwoYEq">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>260</y>
+       <width>171</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Y                       = </string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
+    <zorder>gVTwo</zorder>
+    <zorder>txtTwoYUb</zorder>
+    <zorder>txtTwoRSide</zorder>
+    <zorder>txtTwoYLb</zorder>
+    <zorder>btnTwoHome</zorder>
+    <zorder>txtTwoXVar</zorder>
+    <zorder>txtTwoXUb</zorder>
+    <zorder>txtTwoYVar</zorder>
+    <zorder>txtTwoXLb</zorder>
+    <zorder>btnTwoGraph</zorder>
+    <zorder>lblTwoYEq</zorder>
+   </widget>
    <widget class="QWidget" name="implicitGraph">
     <widget class="QGraphicsView" name="gVImp">
      <property name="geometry">
@@ -261,6 +589,41 @@
    </widget>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>txtTriXVar</tabstop>
+  <tabstop>txtTriYVar</tabstop>
+  <tabstop>txtTriRSide</tabstop>
+  <tabstop>txtTriXLb</tabstop>
+  <tabstop>txtTriXUb</tabstop>
+  <tabstop>txtTriYLb</tabstop>
+  <tabstop>txtTriYUb</tabstop>
+  <tabstop>btnTriGraph</tabstop>
+  <tabstop>btnTriHome</tabstop>
+  <tabstop>txtTwoXVar</tabstop>
+  <tabstop>txtTwoYVar</tabstop>
+  <tabstop>txtTwoRSide</tabstop>
+  <tabstop>txtTwoXLb</tabstop>
+  <tabstop>txtTwoXUb</tabstop>
+  <tabstop>txtTwoYLb</tabstop>
+  <tabstop>txtTwoYUb</tabstop>
+  <tabstop>btnTwoGraph</tabstop>
+  <tabstop>btnTwoHome</tabstop>
+  <tabstop>txtImpXVar</tabstop>
+  <tabstop>txtImpYVar</tabstop>
+  <tabstop>txtImpLSide</tabstop>
+  <tabstop>txtImpRSide</tabstop>
+  <tabstop>txtImpXLb</tabstop>
+  <tabstop>txtImpXUb</tabstop>
+  <tabstop>txtImpYLb</tabstop>
+  <tabstop>txtImpYUb</tabstop>
+  <tabstop>btnImpGraph</tabstop>
+  <tabstop>btnImpHome</tabstop>
+  <tabstop>btnFuncWindowSave</tabstop>
+  <tabstop>btnFuncWindowHome</tabstop>
+  <tabstop>gVImp</tabstop>
+  <tabstop>gVTwo</tabstop>
+  <tabstop>gVTri</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
