--- a/Development/Iterations/Iteration 5/Iteration 5.1/Stylesheets/mainStylesheet.css
+++ b/Development/Iterations/Iteration 5/Iteration 5.1/Stylesheets/mainStylesheet.css
@@ -83,3 +83,8 @@ QTableView {
     background-color: white;
     border-radius: 3px;
 }
+
+QPushButton#btnTrigDrpdwn {
+    background-color: transparent;
+    border-color: transparent;
+}
